--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<article id="work" class="card">
 				<div class="card-info">
 					<strong class="card-category">Work</strong>
-					<button class="card=menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
+					<button class="card-menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
 					<strong class="hours"></strong>
 					<p class="last-track"></p>
 				</div>
@@ -35,7 +35,7 @@
 			<article id="play" class="card">
 				<div class="card-info">
 					<strong class="card-category">Play</strong>
-					<button class="card=menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
+					<button class="card-menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
 					<strong class="hours"></strong>
 					<p class="last-track"></p>
 				</div>
@@ -44,7 +44,7 @@
 			<article id="study" class="card">
 				<div class="card-info">
 					<strong class="card-category">Study</strong>
-					<button class="card=menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
+					<button class="card-menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
 					<strong class="hours"></strong>
 					<p class="last-track"></p>
 				</div>
@@ -53,7 +53,7 @@
 			<article id="exercise" class="card">
 				<div class="card-info">
 					<strong class="card-category">Exercise</strong>
-					<button class="card=menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
+					<button class="card-menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
 					<strong class="hours"></strong>
 					<p class="last-track"></p>
 				</div>
@@ -62,7 +62,7 @@
 			<article id="social" class="card">
 				<div class="card-info">
 					<strong class="card-category">Social</strong>
-					<button class="card=menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
+					<button class="card-menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
 					<strong class="hours"></strong>
 					<p class="last-track"></p>
 				</div>
@@ -71,7 +71,7 @@
 			<article id="self-care" class="card">
 				<div class="card-info">
 					<strong class="card-category">self-care</strong>
-					<button class="card=menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
+					<button class="card-menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
 					<strong class="hours"></strong>
 					<p class="last-track"></p>
 				</div>
