Replaced buttons with radio buttons.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
 					<h3>Jeremy<br>Robson</h3>
 				</div>
 				<nav>
-					<button id="daily-btn">Daily</button>
-					<button id="weekly-btn">Weekly</button>
-					<button id="monthly-btn">Monthly</button>
+					<label for"daily-btn">Daily
+						<input id="daily-btn" type="radio" name="track">
+					</label>
+					<label for="weekly-btn">Weekly
+						<input id="weekly-btn" type="radio" name="track">
+					</label>
+					<label for="monthly-btn">Monthly
+						<input id="monthly-btn" type="radio" name="track">
+					</label>
 				</nav>
 			</article>
 
