--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div>
 					<picture><img src="images/image-jeremy.png" alt="Jeremy"></picture>
 					<p>Report for</p>
-					<h3>Jeremy<br>Robson</h3>
+					<h3>Jeremy Robson</h3>
 				</div>
 				<nav>
 					<label for"daily-btn">Daily
