--- a/index.html
+++ b/index.html
@@ -14,18 +14,12 @@
 				<div>
 					<picture><img src="images/image-jeremy.png" alt="Jeremy"></picture>
 					<p>Report for</p>
-					<h3>Jeremy Robson</h3>
+					<h3>Jeremy<br>Robson</h3>
 				</div>
 				<nav>
-					<label for"daily-btn">Daily
-						<input id="daily-btn" type="radio" name="track">
-					</label>
-					<label for="weekly-btn">Weekly
-						<input id="weekly-btn" type="radio" name="track">
-					</label>
-					<label for="monthly-btn">Monthly
-						<input id="monthly-btn" type="radio" name="track">
-					</label>
+					<button id="daily-btn">Daily</button>
+					<button id="weekly-btn">Weekly</button>
+					<button id="monthly-btn">Monthly</button>
 				</nav>
 			</article>
 
