--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
 				<div>
 					<picture><img src="images/image-jeremy.png" alt="Jeremy"></picture>
 					<p>Report for</p>
-					<h3>Jeremy<br>Robson</h3>
+					<h3>Jeremy Robson</h3>
 				</div>
 				<nav>
-					<button id="daily-btn">Daily</button>
-					<button id="weekly-btn">Weekly</button>
-					<button id="monthly-btn">Monthly</button>
+					<div>
+						<label for"daily-btn">Daily</label>
+						<input id="daily-btn" type="radio" name="track">
+					</div>
+					<div>
+						<label for="weekly-btn">Weekly</label>
+						<input id="weekly-btn" type="radio" name="track">
+					</div>
+					<div>
+						<label for="monthly-btn">Monthly</label>
+						<input id="monthly-btn" type="radio" name="track">
+					</div>
 				</nav>
 			</article>
 
