--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 				</div>
 				<nav>
 					<div>
-						<label for"daily-btn">Daily</label>
 						<input id="daily-btn" type="radio" name="track">
+						<label for="daily-btn">Daily</label>
 					</div>
 					<div>
-						<label for="weekly-btn">Weekly</label>
 						<input id="weekly-btn" type="radio" name="track">
+						<label for="weekly-btn">Weekly</label>
 					</div>
 					<div>
-						<label for="monthly-btn">Monthly</label>
 						<input id="monthly-btn" type="radio" name="track">
+						<label for="monthly-btn">Monthly</label>
 					</div>
 				</nav>
 			</article>
@@ -36,8 +36,8 @@
 				<div class="card-info">
 					<strong class="card-category">Work</strong>
 					<button class="card-menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
-					<strong class="hours"></strong>
-					<p class="last-track"></p>
+					<strong class="hours">09:00</strong>
+					<p class="last-track">Last week - 40hrs</p>
 				</div>
 			</article>
 
