Removed testing text.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 				<div class="card-info">
 					<strong class="card-category">Work</strong>
 					<button class="card-menu"><img src="images/icon-ellipsis.svg" alt="Menu"></button>
-					<strong class="hours">09:00</strong>
-					<p class="last-track">Last week - 40hrs</p>
+					<strong class="hours"></strong>
+					<p class="last-track"></p>
 				</div>
 			</article>
 
